--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,11 @@ hr{
   border-bottom: none;
   width: 5%;
   margin: 100px auto;
+  
+  @media (max-width:700px){
+    width:100%;
+    margin:0;
+  }
 }
 .touch{
   line-height: 0;
