--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,60 @@
 body {
   margin: 0;
   text-align: center;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 p {
-  color: #40514E;
+  color: #40514e;
   line-height: 2;
+  max-width: 100%;
 }
 
 h1 {
-  color: #71C9CE;
+  color: #71c9ce;
   margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
   font-size: 5.625rem;
 }
 
 h2 {
-  color: #71C9CE;
+  color: #71c9ce;
   font-weight: normal;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
 }
 
 h3 {
-  font-family: 'Montserrat', sans-serif;
-  color: #11999E;
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
 }
 
 .topContainer {
-  background-color: #E3FDFD;
+  background-color: #e3fdfd;
   padding-top: 100px;
+  position: relative;
 }
-.middle-container{
+.middle-container {
   margin: 100px 0;
 }
 
 .pro {
   text-decoration: underline;
 }
-.intro{
+.intro {
   width: 30%;
   margin: auto;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
-  bottom: 120px;
+  left: 10%;
+  bottom: 246px;
 }
 
 .top-cloud {
   position: absolute;
-  right: 400px;
+  right: 10%;
   top: 50px;
 }
 
@@ -70,21 +72,16 @@ h3 {
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
-
 }
 
 .skill-row1 {
   width: 50%;
   margin: 50px auto 100px auto;
-
 }
-
-
 
 .syntax {
   width: 20%;
 }
-
 
 .html {
   width: 20%;
@@ -106,16 +103,16 @@ h3 {
 
 .btn {
   background: #11cdd4;
-  background-image: -webkit-linear-gradient(top, #11cdd4, #11999E);
-  background-image: -moz-linear-gradient(top, #11cdd4, #11999E);
-  background-image: -ms-linear-gradient(top, #11cdd4, #11999E);
-  background-image: -o-linear-gradient(top, #11cdd4, #11999E);
-  background-image: linear-gradient(to bottom, #11cdd4, #11999E);
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
-  font-family: 'Merriweather', serif;
-  color:  #71C9CE;
+  font-family: "Merriweather", serif;
+  color: #71c9ce;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
@@ -129,33 +126,32 @@ h3 {
   text-decoration: none;
 }
 
-.bottom-container{
-  background-color:#66BFBF;
-  padding :50px 0 20px;
-  font-family: 'Merriweather', serif;
-
+.bottom-container {
+  background-color: #66bfbf;
+  padding: 50px 0 20px;
+  font-family: "Merriweather", serif;
 }
-hr{
-  border: dotted lightgrey 6px ;
+hr {
+  border: dotted lightgrey 6px;
   border-bottom: none;
   width: 5%;
   margin: 100px auto;
-  
-  @media (max-width:700px){
-    width:100%;
-    margin:0;
+
+  @media (max-width: 700px) {
+    width: 100%;
+    margin: 0;
   }
 }
-.touch{
+.touch {
   line-height: 0;
 }
-a{
+a {
   margin: 10px 20px;
   text-decoration: none;
 }
-a:hover{
-  color: #EAF6F6;
+a:hover {
+  color: #eaf6f6;
 }
-.copyright{
-  color: #EAF6F6;
+.copyright {
+  color: #eaf6f6;
 }
